--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SeriesAdministrator
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans-12.0\\netbeans\\platform\\modules\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -50,7 +51,8 @@ javac.source=12
 javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jcalendar-1.4.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
