linkeadas las nuevas ventanas con la ventana dashboard

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ excludes=
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans-12.0\\netbeans\\platform\\modules\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,8 +52,7 @@ javac.source=12
 javac.target=12
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
