--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/SeriesAdministrator
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans-12.0\\netbeans\\platform\\modules\\jcalendar-1.4.jar
+file.reference.mysql-connector-j-8.2.0.jar=..\\..\\..\\..\\..\\..\\Documents\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
